// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportStatistics/LicenseStatistics/LicenseColumn render snap LicenseColumn empty 1`] = `
<body>
  <div>
    <div
      data-custom-params="{"data":[{"type":"User","value":0,"desc":"desc1","limit":0}],"autoFit":true,"xField":"type","yField":"value","columnStyle":{"radius":4,"fill":"#6094FC","strokeOpacity":0},"columnBackground":{"style":{"fill":"#F7F6F4","fillOpacity":1}},"xAxis":{"animate":false,"line":null,"label":{"autoEllipsis":true,"autoHide":false,"style":{"fill":"#8a8f99","fontSize":12,"fontWeight":400,"lineHeight":20,"width":80,"textAlign":"center","textBaseline":"middle"}}},"yAxis":{"animate":false,"line":null,"grid":null,"label":null},"label":{"offsetY":10,"fields":["value"],"position":"top","style":{"fontSize":12,"lineHeight":30,"height":30,"fontWeight":700,"fontFamily":"PlusJakartaSans Medium","fill":"#292C33"}},"tooltip":{"showMarkers":false,"fields":["type","value"],"domStyles":{"g2-tooltip":{"width":"190px","height":"auto","borderRadius":"8px","background":"#fcfbf9","border":"1px solid #ebe9e8","boxShadow":"0 3px 12px 0 #332c1f1a","padding":"0 12px"}}},"interactions":[{"type":"element-highlight"}],"state":{"active":{"style":{"lineWidth":0,"fill":"#6094FC"}},"inactive":{"style":{"lineWidth":0,"fill":"#ebeae7","opacity":1}}},"theme":"light"}"
    />
  </div>
</body>
`;

exports[`ReportStatistics/LicenseStatistics/LicenseColumn render snap LicenseColumn empty 2`] = `
<body>
  <div>
    <div
      data-custom-params="{"data":[{"type":"name1","value":1,"desc":"desc1","limit":1},{"type":"name2","value":10,"desc":"desc2","limit":10}],"autoFit":true,"xField":"type","yField":"value","columnStyle":{"radius":4,"fill":"#6094FC","strokeOpacity":0},"columnBackground":{"style":{"fill":"#F7F6F4","fillOpacity":1}},"xAxis":{"animate":false,"line":null,"label":{"autoEllipsis":true,"autoHide":false,"style":{"fill":"#8a8f99","fontSize":12,"fontWeight":400,"lineHeight":20,"width":80,"textAlign":"center","textBaseline":"middle"}}},"yAxis":{"animate":false,"line":null,"grid":null,"label":null},"label":{"offsetY":10,"fields":["value"],"position":"top","style":{"fontSize":12,"lineHeight":30,"height":30,"fontWeight":700,"fontFamily":"PlusJakartaSans Medium","fill":"#292C33"}},"tooltip":{"showMarkers":false,"fields":["type","value"],"domStyles":{"g2-tooltip":{"width":"190px","height":"auto","borderRadius":"8px","background":"#fcfbf9","border":"1px solid #ebe9e8","boxShadow":"0 3px 12px 0 #332c1f1a","padding":"0 12px"}}},"interactions":[{"type":"element-highlight"}],"state":{"active":{"style":{"lineWidth":0,"fill":"#6094FC"}},"inactive":{"style":{"lineWidth":0,"fill":"#ebeae7","opacity":1}}},"theme":"light"}"
    />
  </div>
</body>
`;

exports[`ReportStatistics/LicenseStatistics/LicenseColumn render tooltip customContent 1`] = `
<ChartTooltip
  listData={
    [
      {
        "label": "已使用",
        "value": 0,
      },
    ]
  }
  sharedTheme={
    {
      "basic": {
        "borderRadius4": 4,
        "colorBgLayoutGray": "#fcfbf9",
        "colorDangerousActive": "#FAAFB9",
        "colorDefaultIcon": "#575C66",
        "colorFontGrayByWhite": "#C3C6CD",
        "colorGrayLine": "#f2f1f0",
        "colorPrimaryActive": "#3B6FD9",
        "colorPrimaryBgActive": "#f0f7ff",
        "colorPrimaryBgHover": "#E8F3FF",
        "colorPrimaryDisabled": "#B5CDFF",
        "colorPrimaryHover": "#6A9CFF",
        "colorPrimaryShadow": "#4583FF66",
        "colorShadowByWhite": "#332C1F1F",
        "colorWhite": "#FFFFFF",
        "controlHeight": 32,
        "controlHeightLG": 36,
        "controlHeightSM": 28,
        "paddingNumber": 20,
      },
      "components": {
        "basicButton": {
          "dangerous": {
            "default": {
              "color": "#f66074",
            },
            "disabled": {
              "color": "#FAAFB9",
            },
          },
          "dashed": {
            "default": {
              "border": "1px dashed #C7C6C3",
            },
          },
          "default": {
            "active": {
              "background": "#F2F1EF",
            },
            "default": {
              "background": "#FFFFFF",
              "boxShadow": "0 1px 4px 0 #332C1F1F",
              "color": "#292C33",
            },
            "disabled": {
              "background": "#FFFFFF",
              "color": "#C3C6CD",
            },
            "hover": {
              "background": "#F7F6F4",
            },
          },
          "primary": {
            "active": {
              "background": "#3B6FD9",
            },
            "default": {
              "background": "#4583ff",
              "boxShadow": "0 1px 4px 0 #4583FF66",
              "color": "#FFFFFF",
            },
            "disabled": {
              "background": "#B5CDFF",
              "color": "#FFFFFF",
            },
            "hover": {
              "background": "#6A9CFF",
            },
          },
        },
        "basicChart": {
          "border": "1px solid #f2f1f0",
          "borderRadius": "8px",
        },
        "basicDrawer": {
          "backgroundColor": "#fcfbf9",
          "boxShadow": "-20px 0px 40px 0px rgba(0, 26, 65, 0.05)",
          "color": "#292C33",
        },
        "basicEmpty": {
          "description": "#c3c6cd",
          "info": {
            "color": "#C3C6CD",
            "fontSize": "13px",
            "fontWeight": 400,
          },
          "title": {
            "color": "#8a8f99",
            "fontSize": "16px",
            "fontWeight": 500,
          },
        },
        "basicInfoList": {
          "bodyBoxShadow": "none",
          "borderRadius": "8px",
          "title": {
            "backgroundColor": "#f7f6f4",
            "border": "1px solid #f2f1f0",
            "color": "#575c66",
            "fontSize": "13px",
            "fontWeight": 500,
          },
          "value": {
            "border": "1px solid #f2f1f0",
            "color": "#8a8f99",
            "fontSize": "13px",
            "fontWeight": 500,
          },
        },
        "basicInput": {
          "default": {
            "border": "1px solid #E8E7E6",
            "dataCountColor": "#c3c6cd",
            "placeholder": {
              "color": "#c3c6cd",
            },
          },
          "disabled": {
            "background": "#f7f6f4",
            "border": "1px solid #E8E7E6",
          },
          "error": {
            "border": "1px solid #f66074",
          },
          "focus": {
            "border": "1px solid #4583ff",
            "caretColor": "#4583ff",
          },
          "hover": {
            "border": "1px solid #C7C6C3",
          },
        },
        "basicModal": {
          "content": {
            "backgroundColor": "#fcfbf9",
            "body": {
              "color": "#292C33",
            },
            "border": "1px solid #E8E7E6",
            "footer": {
              "backgroundColor": "#f7f6f4",
            },
            "header": {
              "border": "1px solid #E8E7E6",
              "title": {
                "color": "#292C33",
              },
            },
          },
        },
        "basicRangePicker": {
          "active": {
            "border": "1px solid #4583ff",
          },
          "default": {
            "border": "1px solid #E8E7E6",
            "placeholder": {
              "color": "#c3c6cd",
            },
          },
          "disabled": {
            "background": "#f7f6f4",
            "border": "1px solid #E8E7E6",
          },
          "dropdown": {
            "icon": {
              "boxShadow": "0 1px 4px 0 rgba(51, 44, 31, 0.12)",
            },
          },
          "error": {
            "border": "1px solid #f66074",
          },
          "hover": {
            "border": "1px solid #C7C6C3",
          },
        },
        "basicResult": {
          "subTitle": {
            "color": "#8a8f99",
          },
          "title": {
            "color": "#292c33",
          },
        },
        "basicSegmented": {
          "active": {
            "border": "#f7f6f4",
            "boxShadow": "0px 1px 4px 0px #332C1F1F",
            "color": "#4583ff",
          },
          "backgroundColor": "#f2f1ef",
          "color": "#575c66",
          "hoverBackgroundColor": "#E8EAE7",
          "noticeCountColor": "#f66074",
        },
        "basicSelect": {
          "active": {
            "border": "1px solid #4583ff",
          },
          "default": {
            "border": "1px solid #E8E7E6",
            "placeholder": {
              "color": "#c3c6cd",
            },
          },
          "disabled": {
            "background": "#f7f6f4",
            "border": "1px solid #E8E7E6",
          },
          "error": {
            "border": "1px solid #f66074",
          },
          "hover": {
            "border": "1px solid #C7C6C3",
          },
        },
        "basicTag": {
          "Grape": {
            "backgroundColor": "rgba(116, 83, 218, 0.10)",
            "color": "#7453DA",
          },
          "blue": {
            "backgroundColor": "rgba(61, 181, 241, 0.10)",
            "color": "#3DB5F1",
          },
          "cyan": {
            "backgroundColor": "rgba(26, 206, 219, 0.10)",
            "color": "#15C7D4",
          },
          "default": {
            "backgroundColor": "#f7f6f4",
            "color": "#575C66",
          },
          "geekblue": {
            "backgroundColor": "rgba(96, 148, 252, 0.10)",
            "color": "#6094FC",
          },
          "gold": {
            "backgroundColor": "rgba(235, 173, 28, 0.10)",
            "color": "#EBAD1C",
          },
          "gray": {
            "backgroundColor": "rgba(125, 140, 168, 0.10)",
            "color": "#7D8CA8",
          },
          "green": {
            "backgroundColor": "rgba(65, 191, 154, 0.10)",
            "color": "#41BF9A",
          },
          "lilac": {
            "backgroundColor": "rgba(159, 107, 233, 0.10)",
            "color": "#9F6BE9",
          },
          "orange": {
            "backgroundColor": "rgba(245, 153, 87, 0.10)",
            "color": "#F59957",
          },
          "purple": {
            "backgroundColor": "rgba(116, 112, 237, 0.10)",
            "color": "#7470ED",
          },
          "red": {
            "backgroundColor": "rgba(246, 96, 116, 0.10)",
            "color": "#F66074",
          },
        },
        "columnsSetting": {
          "dropdown": {
            "backgroundColor": "#fcfbf9",
            "border": "1px solid #E8E7E6",
            "boxShadow": "0px 3px 12px 0px #332C1F1A",
            "item": {
              "hoverBackgroundColor": "#f7f6f4",
              "iconColor": "#C3C6CD",
              "labelColor": "#292c33",
            },
            "title": {
              "color": "#8a8f99",
            },
          },
        },
        "configItem": {
          "maskBg": "rgba(0, 0, 0, 0.6)",
        },
        "customDraggerUpload": {
          "backgroundColor": "#f7f6f4",
          "border": "#E8E7E6",
          "color": "#c3c6cd",
        },
        "customFilter": {
          "rangePicker": {
            "borderColor": "#E8E7E6",
            "filterLabelColor": "#8a8f99",
            "focusBackgroundColor": "#f2f1ef",
            "hoverBackgroundColor": "#f7f6f4",
            "placeholder": {
              "color": "#8a8f99",
            },
          },
        },
        "customMonacoEditor": {
          "border": "1px solid #E8E7E6",
          "linesContentBackgroundColor": "#fcfbf9",
          "marginBackgroundColor": "#f7f6f4",
          "marginViewOverlaysColor": "#8a8f99",
        },
        "customSelect": {
          "border": "1px solid #E8E7E6",
          "content": {
            "labelColor": "#292C33",
            "prefixColor": "#8a8f99",
          },
          "disabled": {
            "background": "#f7f6f4",
            "border": "1px solid #E8E7E6",
          },
          "focusBackGroundColor": "#f2f1ef",
          "hoverBackgroundColor": "#f7f6f4",
          "iconColor": "#f2f1ef",
          "placeholder": {
            "color": "#8a8f99",
          },
          "searchInput": {
            "borderBottom": "1px solid #E8E7E6",
            "hoverBorderBottom": "1px solid #E8E7E6",
          },
        },
        "filterContainer": {
          "backgroundColor": "#fcfbf9",
          "border": "1px solid #E8E7E6",
        },
        "pageHeader": {
          "background": "#fcfbf9",
          "borderBottom": "1px solid #E8E7E6",
          "title": {
            "color": "#292c33",
          },
        },
        "ruleComponent": {
          "ruleList": {
            "backgroundColor": "#f7f6f4",
            "border": "1px solid #f2f1f0",
            "endContentColor": "#c3c6cd",
            "hoverBackgroundColor": "#fcfbf9",
            "hoverBorder": "1px solid #E8E7E6",
            "levelContent": {
              "annotationColor": "#8a8f99",
              "paramsBackgroundColor": "#9F6BE91A",
              "paramsColor": "#9f6be9",
            },
            "levelIconTextColor": "#8a8f99",
          },
          "ruleStatus": {
            "disabledColor": "#f66074",
            "enableColor": "#1cb889",
          },
          "ruleType": {
            "activeBackgroundColor": "#f0f7ff",
            "activeColor": "#4583ff",
            "backgroundColor": "#f7f6f4",
            "border": "1px solid #f2f1f0",
            "color": "#575c66",
            "countActiveBackgroundColor": "#E8F3FF",
            "countBackgroundColor": "#f2f1ef",
          },
        },
        "searchInput": {
          "searchIconColor": "#c3c6cd",
        },
        "table": {
          "pagination": {
            "backgroundColor": "#fcfbf9",
            "border": "1px solid #F2F1F0",
            "item": {
              "activeBackgroundColor": "#FFFFFF",
              "activeBorder": "1px solid #E8E7E6",
              "activeColor": "#292C33",
              "color": "#8a8f99",
              "hoverBackgroundColor": "#f2f1ef",
            },
            "options": {
              "backgroundColor": "#FFFFFF",
              "border": "1px solid #F2F1F0",
              "boxShadow": "0px 1px 4px 0px #332C1F1F",
              "hoverBorder": "1px solid #F2F1F0",
              "itemColor": "#8a8f99",
            },
            "total": {
              "color": "#575c66",
            },
          },
          "row": {
            "border": "1px solid #F2F1F0",
            "color": "#292c33",
            "moreButtonInActions": {
              "backgroundColor": "#fcfbf9",
              "border": "1px solid #E8E7E6",
              "boxShadow": "0px 3px 12px 0px rgba(51, 44, 31, 0.10)",
              "color": "#292c33",
              "hoverItemBackgroundColor": "#f2f1ef",
            },
          },
          "thead": {
            "border": "1px solid #F2F1F0",
            "color": "#8a8f99",
          },
        },
        "toolbar": {
          "backgroundColor": "#fcfbf9",
          "border": "1px solid #E8E7E6",
        },
      },
      "nav": {
        "backgroundColor": "#fcfbf9",
        "border": "1px solid #f2f1f0",
        "boxShadow": "2px 0 6px 0 rgba(51, 48, 41, 0.04)",
        "globalSystem": {
          "backgroundColor": "#f7f6f4",
        },
        "menu": {
          "dividerColor": "#f2f1f0",
          "groupLabelColor": "#8a8f99",
          "hoverBackgroundColor": "#f2f1ef",
          "hoverLabelColor": "#292C33",
          "labelColor": "#575c66",
        },
        "padding": 16,
        "title": {
          "color": [
            "#4583ff",
            "#292C33",
          ],
        },
        "userNavigate": {
          "backgroundColor": "#fcfbf9",
          "border": "1px solid #E8E7E6",
          "boxShadow": "0 3px 12px 0 rgba(51, 44, 31, 0.10)",
          "content": {
            "color": "#292C33",
            "disabledColor": "#8a8f99",
            "hoverBackgroundColor": "#f2f1ef",
          },
          "footer": {
            "iconWrapper": {
              "activeBackgroundColor": "#FFFFFF",
              "activeColor": "#292C33",
              "backgroundColor": "#f7f6f4",
              "border": "1px solid #E8E7E6",
              "color": "#8a8f99",
            },
            "text": {
              "color": "#292C33",
            },
          },
          "title": {
            "border": "1px solid #f2f1f0",
            "color": "#292C33",
          },
        },
        "width": 220,
      },
      "uiToken": {
        "colorBgBase": "#fcfbf9",
        "colorBgLayout": "#f2f1ef",
        "colorBorder": "#C7C6C3",
        "colorBorderSecondary": "#E8E7E6",
        "colorError": "#f66074",
        "colorErrorBgHover": "#FEE5E5",
        "colorFill": "#ebeae7",
        "colorFillQuaternary": "#fcfbf9",
        "colorFillSecondary": "#f2f1ef",
        "colorFillTertiary": "#f7f6f4",
        "colorInfo": "#4583ff",
        "colorPrimary": "#4583ff",
        "colorSuccess": "#1cb889",
        "colorText": "#292C33",
        "colorTextBase": "#292c33",
        "colorTextQuaternary": "#c3c6cd",
        "colorTextSecondary": "#575c66",
        "colorTextTertiary": "#8a8f99",
        "colorWarning": "#edb054",
        "colorWarningBgHover": "#FFF7E0",
      },
    }
  }
  titleData={
    {
      "dotColor": "red",
      "text": "User",
    }
  }
/>
`;
